Updated portfolio with new changes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ nav a{margin-left:16px; text-decoration:none; color:var(--muted); font-weight:60
     <h2 style="margin-top:0">Experience & Education</h2>
     <ul style="color:var(--muted); padding-left:18px; margin:0;">
       <li><strong>LT Technology Services – Presales & Project Management</strong> — 2 years</li>
-      <li><strong>Master's in Cybersecurity</strong> — [University], expected [Year]</li>
+      <li><strong>Master's in Cybersecurity</strong> — Universitate des Saarlandes, expected 2027</li>
     </ul>
     <h3 style="margin-top:12px">Contact</h3>
     <p style="color:var(--muted)">Email: <a href="mailto:aswathyg217@gmail.com">aswathyg217@gmail.com</a></p>
