--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-:root { --bg:#f8fafc; --text:#0f172a; --accent:#0ea5e9; --muted:#64748b; --card:#fff; --radius:12px; }
-[data-theme="dark"] { --bg:#0b1220; --text:#e6eef8; --accent:#60a5fa; --muted:#94a3b8; --card:#0f1724; }
+:root { --bg:#2e3c02; --text:#0f172a; --accent:#0ea5e9; --muted:#64748b; --card:#fff; --radius:12px; }
+[data-theme="dark"] { --bg:#0a4544; --text:#e6eef8; --accent:#60a5fa; --muted:#94a3b8; --card:#0f1724; }
 *{box-sizing:border-box}
 html,body{height:100%}
 body{font-family:"Inter",system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial; margin:0; background:var(--bg); color:var(--text); line-height:1.5; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;}
@@ -23,7 +23,7 @@ nav a{margin-left:16px; text-decoration:none; color:var(--muted); font-weight:60
 .btn{display:inline-block; padding:10px 16px; border-radius:10px; background:var(--accent); color:white; text-decoration:none; font-weight:600;}
 .about{display:grid; grid-template-columns:1fr 1fr; gap:18px; margin-bottom:28px;}
 .skills{display:flex; flex-wrap:wrap; gap:10px;}
-.skill{background:transparent; border:1px solid rgba(99,102,241,0.06); padding:8px 10px; border-radius:999px; font-weight:600; color:var(--muted);}
+.skill{background:transparent; border:1px solid rgba(3, 70, 89, 0.06); padding:8px 10px; border-radius:999px; font-weight:600; color:var(--muted);}
 .projects-grid{display:grid; grid-template-columns:repeat(2,1fr); gap:16px;}
 .project{overflow:hidden; border-radius:10px;}
 .project img{width:100%; height:170px; object-fit:cover; display:block;}
