--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-:root { --bg:#2e3c02; --text:#0f172a; --accent:#0ea5e9; --muted:#64748b; --card:#fff; --radius:12px; }
-[data-theme="dark"] { --bg:#0a4544; --text:#e6eef8; --accent:#60a5fa; --muted:#94a3b8; --card:#0f1724; }
+:root { --bg:#bbe3e8; --text:#0f172a; --accent:#0ea5e9; --muted:#64748b; --card:#9ce9f4; --radius:12px; }
+[data-theme="dark"] { --bg:#051514; --text:#e6eef8; --accent:#60a5fa; --muted:#94a3b8; --card:#0f1724; }
 *{box-sizing:border-box}
 html,body{height:100%}
 body{font-family:"Inter",system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial; margin:0; background:var(--bg); color:var(--text); line-height:1.5; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;}
@@ -53,7 +53,7 @@ nav a{margin-left:16px; text-decoration:none; color:var(--muted); font-weight:60
   <div>
     <h1 style="margin:0 0 8px 0;">Aswathy Gopinatha Pillai</h1>
     <p style="margin:0 0 16px 0; color:var(--muted)"><strong>Cybersecurity Master’s Student | Aspiring Security Engineer</strong><br>
-    Engineer with 2+ years of experience in project management and budgeting at LT Technology Services. Currently pursuing a Master’s in Cybersecurity in Germany. Strong foundation in electronics, risk mitigation, and resource optimization. Seeking a Werkstudent role in cybersecurity to apply technical and analytical skills in a dynamic, remote-friendly environment.<br> Based in Saarbrücken, Germany.</p>
+    Engineer with 2+ years of experience in project management and budgeting at L&T Technology Services. Currently pursuing a Master’s in Cybersecurity in Universität des Saarlandes. Strong foundation in electronics & communication engineering, risk mitigation, and resource optimization. Seeking a Werkstudent role in Cybersecurity to apply technical and analytical skills in a dynamic, remote-friendly environment.<br> Based in Saarbrücken, Germany.</p>
     <a class="btn" href="#projects">View Projects</a>
     <a class="btn" href="sampleresume.pdf" style="margin-left:10px; background:transparent; color:var(--text); border:1px solid var(--muted)">Download Resume</a>
     <div style="margin-top:18px; color:var(--muted)">Quick links: <a href="https://github.com/aswathyg217" target="_blank">GitHub</a> · <a href="https://linkedin.com/in/aswathyg217" target="_blank">LinkedIn</a></div>
@@ -67,22 +67,27 @@ nav a{margin-left:16px; text-decoration:none; color:var(--muted); font-weight:60
 <section id="about" class="about">
   <div class="card">
     <h2 style="margin-top:0">About</h2>
-    <p style="color:var(--muted)">Engineer with 2+ years of experience in project management and budgeting at LT Technology Services. Currently pursuing a Master’s in Cybersecurity in Germany. Strong foundation in electronics, risk mitigation, and resource optimization.</p>
+    <p style="color:var(--muted)">Engineer with 2+ years of experience in project management and budgeting at L&T Technology Services. Currently pursuing a Master’s in Cybersecurity in Universität des Saarlandes. Strong foundation in electronics, risk mitigation, and resource optimization.</p>
     <h3>Skills</h3>
     <div class="skills">
-      <span class="skill">Network Security</span>
-      <span class="skill">Web Security</span>
+      <span class="skill">Security</span>
+      <span class="skill">IT Forensics</span>
       <span class="skill">Cryptography</span>
-      <span class="skill">Java</span>
-      <span class="skill">Android Basics</span>
+      <span class="skill">Python</span>
+      <span class="skill">Linux</span>
+      <span class="skill">Mobile Security</span>
       <span class="skill">Project Management</span>
     </div>
   </div>
   <div class="card">
-    <h2 style="margin-top:0">Experience & Education</h2>
-    <ul style="color:var(--muted); padding-left:18px; margin:0;">
-      <li><strong>LT Technology Services – Presales & Project Management</strong> — 2 years</li>
-      <li><strong>Master's in Cybersecurity</strong> — Universitate des Saarlandes, expected 2027</li>
+    <h2 style="margin-top:0">Education</h2>
+    <ul style="color:var(--muted); padding-left:18px; margin:0;">    
+      <li><strong>Bachelor's in Electronics & Communication Engineering</strong> — APJ Abdul Kalam Technological University — 2018-2022</li>
+      <li><strong>Master's in Cybersecurity</strong> — Universitate des Saarlandes — 2024 — Present</li>
+    </ul>
+    <h2 style="margin-top:0">Experience</h2>
+    <ul style="color:var(--muted); padding-left:18px; margin:0;">    
+      <li><strong>Engineer — L&T Technology Services || Presales & Project Management</strong> — July 2022 — September 2024</li>
     </ul>
     <h3 style="margin-top:12px">Contact</h3>
     <p style="color:var(--muted)">Email: <a href="mailto:aswathyg217@gmail.com">aswathyg217@gmail.com</a></p>
